# efanxp-calendar-sync-

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: sync.yml
config/: clubs.yaml
docs/: efanxp-alianza-lima.ics  efanxp-all.ics  efanxp-bahia.ics  efanxp-belgrano.ics  efanxp-boca-juniors.ics  efanxp-colo-colo.ics  efanxp-estudiantes.ics  efanxp-huracan.ics  efanxp-river-plate.ics  efanxp-san-lorenzo.ics  efanxp-universidad-de-chile.ics  efanxp-velez.ics
public/: efanxp-alianza-lima.ics  efanxp-all.ics  efanxp-bahia.ics  efanxp-boca-juniors.ics  efanxp-colo-colo.ics  efanxp-estudiantes.ics  efanxp-huracan.ics  efanxp-river-plate.ics  efanxp-san-lorenzo.ics  efanxp-universidad-de-chile.ics  efanxp-velez.ics
scripts/: setup.sh
src/efanxp/: __init__.py  cli.py  config.py  database.py  ics_writer.py  models.py
src/efanxp/core/: deduplicator.py  normalizer.py  orchestrator.py  validator.py
src/efanxp/sources/: __init__.py  api_sports_football.py  api_sports_rugby.py  base.py  espn.py  promiedos.py  sofascore.py  thesportsdb.py  venue_scraper.py
src/efanxp/utils/: logger.py  retry.py
tests/: conftest.py  test_deduplicator.py  test_ics_writer.py  test_normalizer.py  test_promiedos.py  test_validator.py
